crates/bc-cli/tests/cli/snapshots/cli__profile__profile_list_shows_a_created_profile.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 NAME | IMPORTER | CREATED
====================
 bank | csv      | [TIMESTAMP]
----- stderr -----
