crates/bc-cli/tests/cli/snapshots/cli__profile__profile_list_shows_several_profiles.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
 NAME  | IMPORTER | CREATED
=========================================
 bank  | csv      | [TIMESTAMP]
-------+----------+----------------------
 cards | ofx      | [TIMESTAMP]
----- stderr -----
