crates/bc-cli/tests/cli/snapshots/cli__profile__profile_remove_json_output.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: true
exit_code: 0
----- stdout -----
{
  "removed": {
    "id": "[PROFILE_ID]",
    "name": "bank"
  }
}
----- stderr -----
