crates/bc-cli/tests/cli/snapshots/cli__profile__profile_show_rejects_a_null_inside_an_array.snap
---
source: crates/bc-cli/tests/cli/profile.rs
expression: output
---
success: false
exit_code: 1
----- stdout -----
----- stderr -----
error: cannot render config as TOML: unsupported unit type
